# mkdocstrings-javascript

./: .gitignore  README.md  pyproject.toml
mkdocstrings_handlers/javascript/: __init__.py  __main__.py  handler.py  package.json  parser.py  utils.py
