[tool.poetry]
name = "mkdocstrings-javascript"
version = "0.1.0"
description = "Javascript language doc generator for mkdocstrings."
authors = ["Wahyu Setianto <wahyusetianto19@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["mkdocs", "mkdocstrings", "crystal", "mkdocs-plugin"]
packages = [{ include = "mkdocstrings_handlers" }]
exclude = [
    "mkdocstrings_handlers/javascript/node_modules/**",
    "mkdocstrings_handlers/javascript/package-lock.json",
    "mkdocstrings_handlers/javascript/yarn.lock",
]

[tool.poetry.urls]

[tool.poetry.dependencies]
python = "^3.7"
mkdocstrings = "^0.19.0"
typer = { extras = ["all"], version = "^0.6.1" }

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
